# Eigenlicht

./: CMakeLists.txt  README.md
examples/demo/: CMakeLists.txt
examples/demo/source/: main.cpp
examples/media/: background_white.xcf
include/: Component.h  ComponentContainer.h  Eigenlicht.h  Event.h  EventDispatcher.h  GUIManager.h  IComponent.h  IntersectEvent.h  Manager.h  Math.h  Plane.h  Projector.h  TouchPlane.h  eigenlicht.h  utils.h
source/: Component.cpp  ComponentContainer.cpp  Eigenlicht.cpp  Event.cpp  EventDispatcher.cpp  GUIManager.cpp  Manager.cpp  Math.cpp  Plane.cpp  Projector.cpp  TouchPlane.cpp
